package com.example.triplan.application.crew.dto.request;

public class CrewRequest {
}
