package com.example.triplan.domain.place.enums;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public enum PlaceCategory {
    CAFE,RESTAURANT,SHOPPING,ACCOMMODATION,TOUR,ETC,REGION
}